# Docker_base

./: README.md
chinese-couplet/: Dockerfile  chinese-couplet.wsgi  (+1 more)
cuda-master/: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  README_CICD.md  config.py  error.py  manager-config.yaml  manager.py  pyproject.toml  shipitdata.py  test.yml  util.sh  utils.py
cuda-master/doc/: README.md  supported-tags.md  unsupported-tags.md
cuda-master/manifests/: cuda.yaml  rc-push-repos.yml
cuda-master/templates/doc/: README.md.jinja  supported-tags.md.Jinja  unsupported-tags.md.Jinja
cuda-master/templates/gitlab/: gitlab-ci.yml.jinja
cuda-master/templates/redhat/: base-cuda.repo.j2  base-dockerfile.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  runtime-dockerfile.j2
cuda-master/templates/redhat/legacy/base/: Dockerfile.jinja  nvidia-ml.repo.jinja
cuda-master/templates/redhat/legacy/cudnn/: Dockerfile.jinja
cuda-master/templates/redhat/legacy/devel/: Dockerfile.jinja
cuda-master/templates/redhat/legacy/runtime/: Dockerfile.jinja
cuda-master/templates/ubuntu/: base-dockerfile.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  trt-dockerfile.j2
cuda-master/templates/ubuntu/legacy/base/: Dockerfile.jinja
cuda-master/templates/ubuntu/legacy/cudnn/: Dockerfile.jinja
cuda-master/templates/ubuntu/legacy/devel/: Dockerfile.jinja
cuda-master/test/: 00-nvidia-smi.bats  01-samples.bats  02-ld-library-path.bats  03-tools.bats  04-install.bats  05-arch.bats  06-check-nvidia-require-cuda.bats  07-nccl.bats  helpers.bash
cuda-master/test/scripts/: run_tests.sh
(+30 files in other folders)
